Fix filters z-index

--- a/src/sass/components/_filters.scss
+++ b/src/sass/components/_filters.scss
@@ -1,4 +1,7 @@
 .filters  {
+    position: relative;
+    z-index: 10;
+
     .filter {
         min-width: 250px;
     }
